[package]
name = "tgrep"
version = "0.1.0"
authors = ["Dmytro Milinevskyi <dmilinevskyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
clap-verbosity-flag = "0.3"
glob = "0.3"
regex = "1"
ansi_term = "0.12"
futures = { version = "0.3", features = ["thread-pool"] }
crossbeam = "0.7"
term_size = "0.3"
anyhow = "1.0"