[package]
name = "tgrep"
version = "1.3.0"
authors = ["Dmytro Milinevskyi <dmilinevskyi@gmail.com>"]
description = "Toy grep that honors .gitignore"
license = "Unlicense"
edition = "2018"
repository = "https://github.com/niamster/tgrep"
homepage = "https://github.com/niamster/tgrep"
readme = "README.md"
keywords = ["grep", "egrep", "search", "pattern", "gitignore"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
glob = "0.3"
regex = "1"
ansi_term = "0.12"
futures = { version = "0.3", features = ["thread-pool"] }
crossbeam = "0.7"
term_size = "0.3"
anyhow = "1.0"
path-clean = "0.1"
memmap2 = "0.2"
streaming-iterator = "0.1"
memchr = "2.3"
content_inspector = "0.2"