[package]
name = "tgrep"
version = "1.6.10"
authors = ["Dmytro Milinevskyi <dmilinevskyi@gmail.com>"]
description = "Toy grep that honors .gitignore"
license = "Unlicense"
edition = "2021" # Also set in .rustfmt.toml
repository = "https://github.com/niamster/tgrep"
homepage = "https://github.com/niamster/tgrep"
readme = "README.md"
keywords = ["grep", "egrep", "search", "pattern", "gitignore"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tgrep"
path = "src/lib.rs"
bench = false

[[bin]]
name = "tgrep"
path = "src/main.rs"
test = false
bench = false

[[bench]]
name = "patterns"
harness = false

[dev-dependencies]
criterion = "0.8"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
log = "0.4.29"
env_logger = "0.11"
structopt = "0.3"
glob = "0.3.3"
regex = "1.12.3"
ansi_term = "0.12"
futures = { version = "0.3.32", features = ["thread-pool"] }
crossbeam = "0.8"
term_size = "0.3"
anyhow = "1.0.102"
path-clean = "1.0.1"
memmap2 = "0.9"
streaming-iterator = "0.1"
memchr = "2.8.0"
content_inspector = "0.2"
libc = "0.2.183"
